{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 303,
  "lineage": "5c5471f2-5651-bd87-9085-a70b441bced4",
  "resources": [
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:loadbalancer/app/tf-lb-20241128193305973400000007/2effe445dbd2b0ce",
            "arn_suffix": "app/tf-lb-20241128193305973400000007/2effe445dbd2b0ce",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20241128193305973400000007-1952411799.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:loadbalancer/app/tf-lb-20241128193305973400000007/2effe445dbd2b0ce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20241128193305973400000007",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0107cc7dc8b0b9569"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05abc36dd7441bfc0"
              },
              {
                "subnet_id": "subnet-0fbea648ab62e432a"
              }
            ],
            "subnets": [
              "subnet-05abc36dd7441bfc0",
              "subnet-0fbea648ab62e432a"
            ],
            "vpc_id": "vpc-0b450202b71b072e1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:listener/app/tf-lb-20241128193305973400000007/2effe445dbd2b0ce/95b27f5b9177d175",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:listener/app/tf-lb-20241128193305973400000007/2effe445dbd2b0ce/95b27f5b9177d175",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:loadbalancer/app/tf-lb-20241128193305973400000007/2effe445dbd2b0ce",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_region-1.aws_lb.alb",
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "arn_suffix": "targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241128193252812100000004",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
            },
            "tags_all": {
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d-20241128193346145700000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "target_id": "i-07668b8a003ea1463"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d-2024112819334624330000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "target_id": "i-03306e09f2c24e0e5"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d-20241128193346108600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "target_id": "i-0d4234a9f7755dfaf"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d-2024112819334661820000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241128193252812100000004/345fef81df832b3d",
            "target_id": "i-0e0f6b8f47fc3530b"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-07668b8a003ea1463",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07668b8a003ea1463",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0842a1b8b903f5272",
            "private_dns": "ip-10-0-3-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02fa6321f36559aec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bbf0cdee68ce413b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098bd88f19766c117",
            "tags": {
              "Name": "Private-EC2-private-1"
            },
            "tags_all": {
              "Name": "Private-EC2-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbf0cdee68ce413b"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-03306e09f2c24e0e5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03306e09f2c24e0e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-069068503db254b73",
            "private_dns": "ip-10-0-4-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0800ae3ab1cec9dec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bbf0cdee68ce413b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f02fe9bcaae550b",
            "tags": {
              "Name": "Private-EC2-private-2"
            },
            "tags_all": {
              "Name": "Private-EC2-private-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbf0cdee68ce413b"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-0d4234a9f7755dfaf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4234a9f7755dfaf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ae8901f9c12f92b",
            "private_dns": "ip-10-0-5-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3fcb28241aaee08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bbf0cdee68ce413b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fdadf29ea439ba82",
            "tags": {
              "Name": "Private-EC2-private-3"
            },
            "tags_all": {
              "Name": "Private-EC2-private-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbf0cdee68ce413b"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-0e0f6b8f47fc3530b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0f6b8f47fc3530b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0146a1efed5d44550",
            "private_dns": "ip-10-0-6-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf566992bd7c6861",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bbf0cdee68ce413b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e3a8ff10fa05e54",
            "tags": {
              "Name": "Private-EC2-private-4"
            },
            "tags_all": {
              "Name": "Private-EC2-private-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbf0cdee68ce413b"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a0c16c7eb5d48ce",
            "domain": "vpc",
            "id": "eipalloc-01a0c16c7eb5d48ce",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-100-115.compute-1.amazonaws.com",
            "public_ip": "34.192.100.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012b7fa0def9ce3e3",
            "domain": "vpc",
            "id": "eipalloc-012b7fa0def9ce3e3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-85-59-74.compute-1.amazonaws.com",
            "public_ip": "98.85.59.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-09a877e4a0321448f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a877e4a0321448f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f08846f17195747",
            "private_dns": "ip-10-0-1-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-44-213-125-23.compute-1.amazonaws.com",
            "public_ip": "44.213.125.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0334dbf77456b00da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05abc36dd7441bfc0",
            "tags": {
              "Name": "us-east-1-Bastion-Host-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-Bastion-Host-public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bed59e17903ca0a"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-07c53e57fab709149",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c53e57fab709149",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e6d407bbdfd7444b",
            "private_dns": "ip-10-0-2-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.111",
            "public_dns": "ec2-44-202-40-218.compute-1.amazonaws.com",
            "public_ip": "44.202.40.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-018c6caa54e51ad15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbea648ab62e432a",
            "tags": {
              "Name": "us-east-1-Bastion-Host-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-Bastion-Host-public-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bed59e17903ca0a"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:internet-gateway/igw-00e5685417ba28631",
            "id": "igw-00e5685417ba28631",
            "owner_id": "218419384265",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "tags_all": {
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a0c16c7eb5d48ce",
            "association_id": "eipassoc-078e982f892509565",
            "connectivity_type": "public",
            "id": "nat-0e83d3c0caad161a7",
            "network_interface_id": "eni-0ba4294c7f9151879",
            "private_ip": "10.0.1.229",
            "public_ip": "34.192.100.115",
            "subnet_id": "subnet-05abc36dd7441bfc0",
            "tags": {
              "Name": "us-east-1-NAT-Gateway-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-NAT-Gateway-public-1"
            }
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012b7fa0def9ce3e3",
            "association_id": "eipassoc-01eeaf954d61f3b11",
            "connectivity_type": "public",
            "id": "nat-039e21edfc4caeb11",
            "network_interface_id": "eni-04d89e4026435bfb3",
            "private_ip": "10.0.2.49",
            "public_ip": "98.85.59.74",
            "subnet_id": "subnet-0fbea648ab62e432a",
            "tags": {
              "Name": "us-east-1-NAT-Gateway-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-NAT-Gateway-public-2"
            }
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "nat-public-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:route-table/rtb-0d76faaa0e96d1ec4",
            "id": "rtb-0d76faaa0e96d1ec4",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e83d3c0caad161a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-Private-Route-Table-nat-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-Private-Route-Table-nat-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "nat-public-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:route-table/rtb-05618a8c40ab17a86",
            "id": "rtb-05618a8c40ab17a86",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039e21edfc4caeb11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-Private-Route-Table-nat-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-Private-Route-Table-nat-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:route-table/rtb-03a6ff0201d96e8c4",
            "id": "rtb-03a6ff0201d96e8c4",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e5685417ba28631",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-Public-Route-Table"
            },
            "tags_all": {
              "Name": "us-east-1-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_internet_gateway.igw",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_and_3_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0635468690d8b04d7",
            "route_table_id": "rtb-0d76faaa0e96d1ec4",
            "subnet_id": "subnet-098bd88f19766c117"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09558733477095bc0",
            "route_table_id": "rtb-0d76faaa0e96d1ec4",
            "subnet_id": "subnet-0fdadf29ea439ba82"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_and_4_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072672951e0b8baf2",
            "route_table_id": "rtb-05618a8c40ab17a86",
            "subnet_id": "subnet-04f02fe9bcaae550b"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d0cdcc85008633",
            "route_table_id": "rtb-05618a8c40ab17a86",
            "subnet_id": "subnet-00e3a8ff10fa05e54"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6ab9a5e9b733df7",
            "route_table_id": "rtb-03a6ff0201d96e8c4",
            "subnet_id": "subnet-05abc36dd7441bfc0"
          },
          "dependencies": [
            "module.network_region_a.aws_internet_gateway.igw",
            "module.network_region_a.aws_route_table.public_route_table",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e28744ae996dd43",
            "route_table_id": "rtb-03a6ff0201d96e8c4",
            "subnet_id": "subnet-0fbea648ab62e432a"
          },
          "dependencies": [
            "module.network_region_a.aws_internet_gateway.igw",
            "module.network_region_a.aws_route_table.public_route_table",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-098bd88f19766c117",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098bd88f19766c117",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-1"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-1"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-04f02fe9bcaae550b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f02fe9bcaae550b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-2"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-2"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-0fdadf29ea439ba82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdadf29ea439ba82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-3"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-3"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-00e3a8ff10fa05e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3a8ff10fa05e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-4"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-4"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-05abc36dd7441bfc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05abc36dd7441bfc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-public-1"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-0fbea648ab62e432a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbea648ab62e432a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-public-2"
            },
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:vpc/vpc-0b450202b71b072e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a49c845b2153312",
            "default_route_table_id": "rtb-04458961fe4bebb4f",
            "default_security_group_id": "sg-03bed59e17903ca0a",
            "dhcp_options_id": "dopt-06921c6390dcf404e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b450202b71b072e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04458961fe4bebb4f",
            "owner_id": "218419384265",
            "tags": {
              "Name": "VPC-us-east-1"
            },
            "tags_all": {
              "Name": "VPC-us-east-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044ea62c94a63d4a4",
            "domain": "vpc",
            "id": "eipalloc-044ea62c94a63d4a4",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-177-202-173.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.202.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039a222cd58de64e8",
            "domain": "vpc",
            "id": "eipalloc-039a222cd58de64e8",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-52-219-44.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.219.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-071c06862804bb925",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071c06862804bb925",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0254c77bfe6f89a65",
            "private_dns": "ip-10-1-1-193.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.193",
            "public_dns": "ec2-18-144-28-243.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.28.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05edcd534d9a2efde",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1f3959d15b220f5",
            "tags": {
              "Name": "us-west-1-Bastion-Host-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-Bastion-Host-public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac844401ba65ebd7"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-0e1f2fa7c5fef3ce6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1f2fa7c5fef3ce6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055d31a5718d82217",
            "private_dns": "ip-10-1-2-156.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.156",
            "public_dns": "ec2-13-57-236-42.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.236.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08dfbf03eca58a9b9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e51e2ffc9ddb9712",
            "tags": {
              "Name": "us-west-1-Bastion-Host-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-Bastion-Host-public-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac844401ba65ebd7"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:internet-gateway/igw-03c0ef950d4e7fbb1",
            "id": "igw-03c0ef950d4e7fbb1",
            "owner_id": "218419384265",
            "tags": {
              "Name": "us-west-1-igw"
            },
            "tags_all": {
              "Name": "us-west-1-igw"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044ea62c94a63d4a4",
            "association_id": "eipassoc-074130bfa60fe7bfc",
            "connectivity_type": "public",
            "id": "nat-0671b30afe9566696",
            "network_interface_id": "eni-0aad9b40111189da4",
            "private_ip": "10.1.1.83",
            "public_ip": "54.177.202.173",
            "subnet_id": "subnet-0c1f3959d15b220f5",
            "tags": {
              "Name": "us-west-1-NAT-Gateway-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-NAT-Gateway-public-1"
            }
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039a222cd58de64e8",
            "association_id": "eipassoc-0f187f759bd1c8fec",
            "connectivity_type": "public",
            "id": "nat-0c14303b48e50b187",
            "network_interface_id": "eni-0304f6f027c2ead7e",
            "private_ip": "10.1.2.158",
            "public_ip": "52.52.219.44",
            "subnet_id": "subnet-0e51e2ffc9ddb9712",
            "tags": {
              "Name": "us-west-1-NAT-Gateway-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-NAT-Gateway-public-2"
            }
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "nat-public-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:route-table/rtb-0f023966e6ea9db09",
            "id": "rtb-0f023966e6ea9db09",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0671b30afe9566696",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-1-Private-Route-Table-nat-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-Private-Route-Table-nat-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "nat-public-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:route-table/rtb-021d4b3795f0cd3bc",
            "id": "rtb-021d4b3795f0cd3bc",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c14303b48e50b187",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-1-Private-Route-Table-nat-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-Private-Route-Table-nat-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:route-table/rtb-059dafedd7ed90332",
            "id": "rtb-059dafedd7ed90332",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c0ef950d4e7fbb1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-1-Public-Route-Table"
            },
            "tags_all": {
              "Name": "us-west-1-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_internet_gateway.igw",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_and_3_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0059342ddd4116044",
            "route_table_id": "rtb-0f023966e6ea9db09",
            "subnet_id": "subnet-01d91f7ab551fbe44"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad0fefd919bddaa5",
            "route_table_id": "rtb-0f023966e6ea9db09",
            "subnet_id": "subnet-08550f5981241edde"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_and_4_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a1025355b05ac7",
            "route_table_id": "rtb-021d4b3795f0cd3bc",
            "subnet_id": "subnet-076abbdf5b08a157a"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045fec46773ee2c26",
            "route_table_id": "rtb-021d4b3795f0cd3bc",
            "subnet_id": "subnet-0edc6a6724676d08f"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8c37a42449f62e",
            "route_table_id": "rtb-059dafedd7ed90332",
            "subnet_id": "subnet-0c1f3959d15b220f5"
          },
          "dependencies": [
            "module.network_region_b.aws_internet_gateway.igw",
            "module.network_region_b.aws_route_table.public_route_table",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc7e89a68e4f932",
            "route_table_id": "rtb-059dafedd7ed90332",
            "subnet_id": "subnet-0e51e2ffc9ddb9712"
          },
          "dependencies": [
            "module.network_region_b.aws_internet_gateway.igw",
            "module.network_region_b.aws_route_table.public_route_table",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-01d91f7ab551fbe44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d91f7ab551fbe44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-1"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-1"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-076abbdf5b08a157a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076abbdf5b08a157a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-2"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-2"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-08550f5981241edde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08550f5981241edde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-3"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-3"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0edc6a6724676d08f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc6a6724676d08f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-4"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-4"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0c1f3959d15b220f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f3959d15b220f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-public-1"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0e51e2ffc9ddb9712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e51e2ffc9ddb9712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-public-2"
            },
            "vpc_id": "vpc-001860b35f84a8dcb"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:vpc/vpc-001860b35f84a8dcb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a56270746eb05051",
            "default_route_table_id": "rtb-0c6798fda10fbfbeb",
            "default_security_group_id": "sg-0ac844401ba65ebd7",
            "dhcp_options_id": "dopt-095f255f0702b2e7b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001860b35f84a8dcb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6798fda10fbfbeb",
            "owner_id": "218419384265",
            "tags": {
              "Name": "VPC-us-west-1"
            },
            "tags_all": {
              "Name": "VPC-us-west-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_region_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:security-group/sg-0107cc7dc8b0b9569",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0107cc7dc8b0b9569",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241128193254973900000005",
            "name_prefix": "terraform-",
            "owner_id": "218419384265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_region_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:security-group/sg-0bbf0cdee68ce413b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbf0cdee68ce413b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241128193254985300000006",
            "name_prefix": "terraform-",
            "owner_id": "218419384265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b450202b71b072e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    }
  ]
}